font-spacing fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -222,7 +222,7 @@ input, select, textarea {
 		font-size: 1.5rem;
 		font-weight: 400;
 		line-height: 1.4;
-		letter-spacing: 0.4rem;
+		letter-spacing: 0.3rem;
 	}
 
 	h3 {
